--- a/views/guess.erb
+++ b/views/guess.erb
@@ -14,7 +14,8 @@
 <% end %>
 
 <form action="/guess", method="POST">
-  <input type="text" name="guess" maxlength="1" required/>
+  Guess a letter (a-z):
+  <input type="text" name="guess" maxlength="1" pattern="[A-Za-z]" required/><br>
   <input type="submit" name="submit">
 </form>
 
