--- a/views/main.erb
+++ b/views/main.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>Hangman</header>
-    <div>
+    <div class="container">
       <%= yield %>
     </div>
   </body>
