Add autofocus for inputs

--- a/views/guess.erb
+++ b/views/guess.erb
@@ -20,7 +20,7 @@
 <form action="/guess", method="POST">
   <br>
   Guess a letter (a-z):
-  <input id="text_guess" type="text" name="guess" maxlength="1" pattern="[A-Za-z]" required/><br>
+  <input id="text_guess" type="text" name="guess" maxlength="1" pattern="[A-Za-z]" required autofocus/><br>
   <input class="submit_button" type="submit" name="submit">
 </form>
 <br>
