--- a/views/index.erb
+++ b/views/index.erb
@@ -15,5 +15,5 @@
 </div>
 
 <form action="/game", method="GET">
-  <input class="submit_button" type="submit" value="Play Game">
+  <input class="submit_button" type="submit" value="Play Game" autofocus>
 </form>
