--- a/views/lose.erb
+++ b/views/lose.erb
@@ -13,5 +13,5 @@
 </div>
 <br>
 <form action="/", method="GET">
-  <input class="submit_button" type="submit" value="Main Menu">
+  <input class="submit_button" type="submit" value="Main Menu" autofocus>
 </form>
