--- a/views/win.erb
+++ b/views/win.erb
@@ -10,5 +10,5 @@
 <br>
 
 <form action="/", method="GET">
-  <input class="submit_button" type="submit" value="Main Menu">
+  <input class="submit_button" type="submit" value="Main Menu" autofocus>
 </form>
