--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   text-align: center;
   font-size: 1.5em;
-  max-height: 90%;
+  height: 90%;
 }
 
 header {
@@ -44,12 +44,13 @@ p{
   text-align: left;
 }
 
-
 .container{
   width: 1200px;
   max-width: 80%;
+  min-width: 400px;
   height: 1000px;
-  max-height: 100%;
+  min-height: 700px;
+  max-height: 80%;
   background-color: #ea6e5f;
   padding: 20px;
   box-shadow: 0 0 5px #ea6e5f;
@@ -97,6 +98,7 @@ img {
 input {
   margin: 10px auto;
   width: 200px;
+  height: 25%;
 }
 
 #text_guess {
@@ -105,4 +107,8 @@ input {
   box-shadow: 0 0 5px #ea6e5f;
   border-radius: 10px;
   margin: 5px auto;
+}
+
+form {
+  height: 20%;
 }
